# commitment-issues

./: .gitignore  .mega-linter.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md
.cargo/: config.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: continuous-build.yaml  mega-linter.yaml
src/: lib.rs  macros.rs
template/: Cargo.toml.liquid  build.rs  cargo-generate.toml  init.rhai  metadata.x
template/src/: main.rs
